# cyber_trust_AI

./: README.md  docker-compose.yaml
backend/: .gitignore  pyproject.toml
backend/src/cnav/: __main__.py  evaluation_model.json
backend/src/cnav/api/: __init__.py  adapters.py  dependencies.py  main.py  services.py
backend/src/cnav/api/models/: __init__.py  answers.py  common.py  (+5 more)
backend/src/cnav/chain/: __init__.py  compliance_evaluator.py  evidence_assessor.py  gap_analyzer.py  orchestrator.py  question_provision_mapper.py  report_generator.py
backend/src/cnav/data/: Cyber Essentials Questionnaire.xlsx  answers.json  cyber-essentials-self-assessment.csv  cyber-essentials-structured.json  cyberessentials_template_questions.csv  fake_questions.json  provisions.json  questions.json  rotary_data.csv  sample_company_qa.csv  sample_company_qa.xlsx
backend/src/cnav/data_parsing/: map_data_to_schemas.py  parse_csv_to_json.py  parse_rotary_data.py
backend/src/cnav/database/: SCHEMA_DESIGN.md  config.py  connection.py  import_rotary_data.py  simple_import.py  sync_categories_and_clauses.py  sync_organization_answers.py  sync_questions.py  test_sync.py  update_schema.py
backend/src/cnav/docs/: cybera.txt  document.txt  scope_statement_template.yaml  simulated_audit_example.yaml
backend/src/cnav/output_schemas/: __init__.py
backend/src/cnav/prompt_generation/: README.md  main.py  metaprompting_pipeline.py
backend/src/cnav/prompts/: __init__.py  compliance_evaluation.py  evidence_assessment.py  gap_analysis.py  main_user_prompt.py  report_generation.py
(+142 files in other folders)
