[project]
name = "cnav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hung Quoc To", email = "88069966+quochungto@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
cnav = "cnav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnav"]

[tool.hatch.metadata]
allow-direc-references = true
